--- a/startup-scripts/resources.yaml
+++ b/startup-scripts/resources.yaml
@@ -54,7 +54,7 @@ metadata:
 spec:
   subscriptions:
   - image:
-      repoURL: ghcr.io/MaxFlandersLaerdal/kargo-demo
+      repoURL: ghcr.io/maxflanderslaerdal/kargo-demo
       discoveryLimit: 5
       imageSelectionStrategy: Digest
       constraint: latest
@@ -69,15 +69,15 @@ spec:
   - name: gitopsRepo
     value: ${GITOPS_REPO_URL}
   - name: imageRepo
-    value: ghcr.io/MaxFlandersLaerdal/kargo-demo
+    value: ghcr.io/maxflanderslaerdal/kargo-demo
   steps:
   - uses: git-clone
     config:
-      repoURL: \${{ vars.gitopsRepo }}
+      repoURL: ${{ vars.gitopsRepo }}
       checkout:
       - branch: main
         path: ./src
-      - branch: stage/\${{ ctx.stage }}
+      - branch: stage/${{ ctx.stage }}
         create: true
         path: ./out
   - uses: git-clear
@@ -88,27 +88,27 @@ spec:
     config:
       path: ./src/base
       images:
-      - image: \${{ vars.imageRepo }}
-        tag: \${{ imageFrom(vars.imageRepo).Tag }}
+      - image: ${{ vars.imageRepo }}
+        tag: ${{ imageFrom(vars.imageRepo).Tag }}
   - uses: kustomize-build
     config:
-      path: ./src/stages/\${{ ctx.stage }}
+      path: ./src/stages/${{ ctx.stage }}
       outPath: ./out
   - uses: git-commit
     as: commit
     config:
       path: ./out
-      message: \${{ task.outputs.update.commitMessage }}
+      message: ${{ task.outputs.update.commitMessage }}
   - uses: git-push
     config:
       path: ./out
   - uses: argocd-update
     config:
       apps:
-      - name: kargo-demo-\${{ ctx.stage }}
+      - name: kargo-demo-${{ ctx.stage }}
         sources:
-        - repoURL: \${{ vars.gitopsRepo }}
-          desiredRevision: \${{ task.outputs.commit.commit }}
+        - repoURL: ${{ vars.gitopsRepo }}
+          desiredRevision: ${{ task.outputs.commit.commit }}
 ---
 apiVersion: kargo.akuity.io/v1alpha1
 kind: Stage
