update base image

--- a/startup-scripts/resources.yaml
+++ b/startup-scripts/resources.yaml
@@ -52,6 +52,7 @@ metadata:
   name: kargo-demo
   namespace: kargo-demo
 spec:
+  interval: 5m
   subscriptions:
   - image:
       repoURL: ghcr.io/maxflanderslaerdal/kargo-demo
