--- a/deployment-kargo-demo.yaml
+++ b/deployment-kargo-demo.yaml
@@ -13,7 +13,7 @@ spec:
         app: kargo-demo
     spec:
       containers:
-      - image: public.ecr.aws/nginx/nginx:placeholder
+      - image: ghcr.io/maxflanderslaerdal/kargo-demo:latest
         name: nginx
         volumeMounts:
         - mountPath: /usr/share/nginx/html/index.html
