Updated ./src/base to use new image
- ghcr.io/maxflanderslaerdal/kargo-demo:sha-3e83de7

--- a/configmap-kargo-demo-content.yaml
+++ b/configmap-kargo-demo-content.yaml
@@ -9,6 +9,9 @@ data:
     <body>
 
     <h1>uat</h1>
+    <div id="additional-content">
+      <iframe src="additional.html" width="100%" height="500px" style="border:none;"></iframe>
+    </div>
 
     </body>
     </html>
