--- a/deployment-kargo-demo.yaml
+++ b/deployment-kargo-demo.yaml
@@ -13,12 +13,13 @@ spec:
         app: kargo-demo
     spec:
       containers:
-      - image: public.ecr.aws/nginx/nginx:1.29.4
+      - image: ghcr.io/maxflanderslaerdal/kargo-demo:sha-3e83de7
         name: nginx
         volumeMounts:
-        - mountPath: /usr/share/nginx/html
+        - mountPath: /usr/share/nginx/html/index.html
           name: content
           readOnly: true
+          subPath: index.html
       volumes:
       - configMap:
           name: kargo-demo-content
